<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp"

    tools:context=".ui.DetailKabKotaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@+id/btn_view_peta">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/img_item_photo"

                android:layout_width="200dp"
                android:layout_height="200dp"

                android:layout_marginTop="20dp"

                android:scaleType="centerInside"

                android:contentDescription="@string/image_detail_kab_kota"

                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_nama"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                android:text="@string/kabkota_name"

                android:textStyle="bold"
                android:textSize="20sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/pusat_pemerintahan"

                        android:layout_weight="0.3" />

                    <TextView
                        android:id="@+id/tv_pusat_pemerintahan"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/pusat_pemerintahan"

                        android:layout_weight="0.7" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/bupati_walikota"

                        android:layout_weight="0.3" />

                    <TextView
                        android:id="@+id/tv_bupati_walikota"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/bupati_walikota"

                        android:layout_weight="0.7" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/tanggal_berdiri"

                        android:layout_weight="0.3" />

                    <TextView
                        android:id="@+id/tv_tanggal_berdiri"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/tanggal_berdiri"

                        android:layout_weight="0.7" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/luas_wilayah"

                        android:layout_weight="0.3" />

                    <TextView
                        android:id="@+id/tv_luas_wilayah"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/luas_wilayah"

                        android:layout_weight="0.7" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/jumlah_penduduk"

                        android:layout_weight="0.3" />

                    <TextView
                        android:id="@+id/tv_jumlah_penduduk"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/jumlah_penduduk"

                        android:layout_weight="0.7" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/jumlah_kecamatan"

                        android:layout_weight="0.3" />

                    <TextView
                        android:id="@+id/tv_jumlah_kecamatan"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/jumlah_kecamatan"

                        android:layout_weight="0.7" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/jumlah_kelurahan"

                        android:layout_weight="0.3" />

                    <TextView
                        android:id="@+id/tv_jumlah_kelurahan"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/jumlah_kelurahan"

                        android:layout_weight="0.7" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/jumlah_desa"

                        android:layout_weight="0.3" />

                    <TextView
                        android:id="@+id/tv_jumlah_desa"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/jumlah_desa"

                        android:layout_weight="0.7" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/deskripsi"

                        android:layout_weight="0.3" />

                    <TextView
                        android:id="@+id/tv_deskripsi"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/deskripsi"

                        android:layout_weight="0.7" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_view_peta"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:layout_marginTop="8dp"

        android:text="@string/tampilkan_peta_wilayah" />

</RelativeLayout>